# pyppur

./: CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: api_reference.rst  changelog.rst  conf.py  examples.rst  getting_started.rst  index.rst  mathematical_theory.rst  pyppur.objectives.rst  pyppur.optimizers.rst  pyppur.rst  pyppur.utils.rst  requirements.txt
experiments/: benchmark_value.py  deep_investigation.py  rescue_strategies.py
pyppur/: projection_pursuit.py
pyppur/examples/: basic_usage.py  example.ipynb
pyppur/objectives/: __init__.py  base.py  distance.py  reconstruction.py
pyppur/optimizers/: __init__.py  base.py  grid_optimizer.py  scipy_optimizer.py
pyppur/utils/: __initi__.py  metrics.py  preprocessing.py  visualization.py
tests/: __init__.py  test_edge_cases.py  test_new_features.py  test_objectives.py  test_objectives_detailed.py  test_optimizer.py  test_projection_pursuit.py  test_utils.py  test_utils_extended.py
