[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[project]
name = "pyppur"
version = "0.4.1"
description = "Advanced Projection Pursuit implementation with tied/untied weights, nonlinear/linear distance distortion, and comprehensive documentation"
readme = "README.md"
authors = [
    {name = "Gaurav Sood", email = "gsood07@gmail.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0", 
    "scikit-learn>=1.0.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]

[project.urls]
"Homepage" = "https://github.com/gojiplus/pyppur"
"Bug Tracker" = "https://github.com/gojiplus/pyppur/issues"


[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.7.0",
    "pyright>=1.1.390",
    "pydoclint>=0.5.0",
    "pre-commit>=3.0",
    "preen>=0.1.0",
]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.ruff]
line-length = 88
target-version = "py312"
preview = true
exclude = ["docs/conf.py"]

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), isort (`I`), and pydoclint (`DOC`) codes
select = ["E", "F", "I", "DOC"]  # E/F for flake8, I for isort, DOC for pydoclint
ignore = ["DOC201", "DOC501"]  # Ignore return/exception documentation (using type hints)

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Per-file ignores for common ML/matplotlib patterns
[tool.ruff.lint.per-file-ignores]
"pyppur/examples/*.py" = ["F841"]  # Allow unused variables in examples
"tests/*.py" = ["F841"]  # Allow unused variables in tests  
"pyppur/utils/visualization.py" = ["F841"]  # Allow unused fig objects

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["pyppur", "tests"]
exclude = ["**/__pycache__", "build", "dist"]
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
stubPath = "typings"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = ""

[tool.pydoclint]
style = "google"
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
skip-checking-raises = true
allow-init-docstring = true
